# temp-tree-sitter-name-hack

./: .envrc  Cargo.toml  binding.gyp  grammar.js  package.json  pnpm-lock.yaml  tree-sitter-GRAMMAR_NAME.wasm
bindings/node/: binding.cc  index.js
bindings/rust/: lib.rs
src/: grammar.json  node-types.json  parser.c
test/corpus/: statements.txt
